[metadata]
name = litedao
version = file: VERSION
url = https://github.com/pyrustic/litedao
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Intuitive interaction with SQLite database
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    sqlite
    dao
    database-access
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    litedao = litedao.__main__:main
